# LLM-based-Customer-Service-System

./: .env.example  .gitignore  AGENTS.md  README.md  initial-request.md  pyproject.toml
docs/: research-result.md
src/customer_service/: __init__.py  app.py  config.py
src/customer_service/agent/: __init__.py  cypher_agent.py  graph_schema.py  prompts.py
src/customer_service/data_generation/: __init__.py  generate.py  schema.py
src/customer_service/graph/: __init__.py  loader.py
