[project]
name = "llm-customer-service"
version = "0.1.0"
description = "グラフDB×LLMによる接客AIエージェントのデモ（ヘッドホン事業）"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "neo4j>=5.25",
    "langchain-neo4j>=0.4",
    "langchain-core>=0.3",
    "langgraph>=0.2.60",
    "langchain-anthropic>=0.3",
    "streamlit>=1.40",
    "pandas>=2.2",
    "faker>=33.0",
    "python-dotenv>=1.0",
    "pydantic>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/customer_service"]
